--- a/fathersday/fathersday.vcxproj
+++ b/fathersday/fathersday.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{56a6f37c-b17b-4bff-a967-78c1a1e6f8b6}</ProjectGuid>
     <RootNamespace>fathersday</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>fathersday</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="fathersday.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="functions.cpp" />
   </ItemGroup>
   <ItemGroup>
